<resources>
    <string name="app_name">S9Firebase2023</string>
    <string name="valbtnlogin">LOGIN</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_listado">Listado</string>
    <string name="menu_registro">Registro</string>
    <string name="menu_mascota">Mascota</string>
    <string name="menu_pokemon">Pokemon</string>
    <string name="menu_customer">Cliente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="valtitleregister">Registro de Curso</string>
    <string name="valtxtcourse">Ingrese el curso</string>
    <string name="valtxtscore">Ingrese la nota</string>
    <string name="valbtnsavecourse">Guardar</string>
    <string name="valbtnregister">REGISTRARSE</string>
    <string name="valtitleregistro">Registro</string>
    <string name="valbtnsaveregister">Register</string>
    <string name="valtxtfullnameregister">Full name</string>
    <string name="valtxtcountryregister">Country</string>
    <string name="valtxtemailregister">Email</string>
    <string name="valtxtpasswordregister">Password</string>
    <string name="valbtnsearchpokemon">Search</string>
    <string name="valetsearchpokemon">Ejm: pikachu</string>
    <string name="valtitlecustomerregister">Customer Register</string>
    <string name="valbtnsavecustomer">SAVE</string>
    <string name="valtxtfirstname">Enter a first name</string>
    <string name="valtxtlastname">Enter a last name</string>
    <string name="valtxtphonenumber">Enter a phone number</string>
</resources>